--- a/src/README
+++ b/src/README
@@ -1,5 +1,5 @@
 1.
-	In this part, clients and server communicate based on UDP protocol, socket type is SOCK_DGRAM. All source files are written in C and utilize libraries provided on speclab. 
+	In this part, clients and server communicate based on UDP/TCO protocol. All source files are written in C and utilize libraries provided on speclab. 
 2.
 	All the data process work is done on the server side. Server takes data, including an identifier, from different data respectively, invokes corresponding functions and send the results in string format back to clients. Clients then print out response from server directly.
 	In the server, I created two linked lists to store the lists of voters and candidates specified by the clients. Each node of the lists represents individual voter or candidate which is a variable of Voter structure or Candidate structure. Voter structure entails an integer field to store the voter's id, a short type variable indicating whether he/she has voted or not and a pointer pointing to the next node. Candidate structure entails a string field for the name of the candidate, the number of votes he/she gets and a pointer pointing to the next node on the list. Whenever a new node is created, it will link to the head of the existent linkedlist(or NULL is the list is empty) and becomes the "head" of the list. Candidates with highest votes are collected in the tail of the list. Thus if a candidate node increments its votes, it will check the votes of node following it. If all the nodes following it has fewer votes, it goes to the end of the list. If it ties with a bunch of highest voted nodes, it goes to the position pointing to the first of those highes voted nodes. Note that I did not implement node exchange operations in this assignment. Instead, I only exchange contents of the node over positions on the list because clients only cares about contents.
